--- a/budget_style.css
+++ b/budget_style.css
@@ -5,7 +5,9 @@
     font-family: "Poppins", sans-serif;
 }
 body {
-    background-color: #ffffff;
+    background:url("financepink.png") no-repeat;
+    background-size:150% 150%;
+    background-position: center;
 }
 .wrapper {
     width: 90%;
