--- a/budget_style.css
+++ b/budget_style.css
@@ -5,7 +5,7 @@
     font-family: "Poppins", sans-serif;
 }
 body {
-    background:url("financepink.png") no-repeat;
+    background:url("financepink.jpeg") no-repeat;
     background-size:150% 150%;
     background-position: center;
 }
